Try margin to avoid footer link overlap

--- a/themes/startwords/assets/scss/_footer.scss
+++ b/themes/startwords/assets/scss/_footer.scss
@@ -47,7 +47,7 @@ body > footer {
 
             a {
                 display: inline-block;
-                padding-top: rem(8px);
+                margin-top: rem(8px);
             }
         }
     }
